@@ -175,8 +175,10 @@ OPTION(WARNINGS "enable warnings" ON)
 OPTION(EMPTY_LOCKS "enable empty locks" OFF)
 
 # sound backends
-OPTION(ALSA "alsa backend" OFF)
-OPTION(ALSA_DLOPEN "alsa dynamic loading" OFF)
+IF(LINUX)
+  OPTION(ALSA "alsa backend" OFF)
+  OPTION(ALSA_DLOPEN "alsa dynamic loading" OFF)
+ENDIF(LINUX)
 OPTION(ARTS "arts backend" OFF)
 OPTION(ARTS_DLOPEN "arts dynamic loading" OFF)
 OPTION(ESD "esd backend" OFF)
@@ -184,7 +186,9 @@ OPTION(ESD_DLOPEN " esd dynamic loading" OFF)
 OPTION(WAVEOUT "wave out backend" ON)
 OPTION(NULLOUT "null out backend" ON)
 OPTION(SDL "sdl backend" OFF)
-OPTION(DSOUND "directsound backend" OFF)
+IF(WIN32)
+  OPTION(DSOUND "directsound backend" OFF)
+ENDIF(WIN32)  
 
 # additional codecs
 OPTION(VORBIS "vorbis support" OFF)
@@ -783,8 +787,10 @@ ENDIF(BUILD_TESTS)
 SET(prefix ${CMAKE_INSTALL_PREFIX})
 SET(exec_prefix "\${prefix}")
 SET(libdir "\${exec_prefix}/lib")
+SET(bindir "\${exec_prefix}/bin")
 SET(includedir "\${prefix}/include")
 SET(requirements "")
+SET(PTHREAD_LIBS ${CMAKE_THREAD_LIBS_INIT})
 
 CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/admin/pkgconfig/openal.pc.in ${CMAKE_BINARY_DIR}/admin/pkgconfig/openal.pc @ONLY)
 CONFIGURE_FILE(${CMAKE_SOURCE_DIR}/admin/pkgconfig/openal-config.in ${CMAKE_BINARY_DIR}/admin/pkgconfig/openal-config @ONLY)
