@@ -1,3 +1,10 @@
+2005-12-10  Prakash Punnoor <prakash@punnoor.de>
+
+	* CMakeLists.txt: set some vars for openal-config.in;
+	enable ALSA option only for Linux, DSOUND only for Win32
+	
+	* README: some typos
+
 2005-12-10  Sven Panne  <sven.panne@aedion.de>
 
 	* src/al_buffer.c: Fixed buffer attribute getters (thanks to Shawn
@@ -16,7 +23,7 @@
 	inclusion the autotools way, minimizing tests and giving nice feedback
 	to the user.
 
-2005-11-03  Prakash Punnoor <prakash@punnoor.de>
+2005-12-03  Prakash Punnoor <prakash@punnoor.de>
 
 	* CMakeLists.txt: C99 stuff, better alsa detection, threading
 	clean-up; forgot to define HAVE_MMX_MEMCPY; fix library linking;
